--- a/app/views/chat.html
+++ b/app/views/chat.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      var socket = io.connect('http://localhost:3000')
+      var socket = io.connect('http://127.0.0.1:3000')
       $('form').submit(function(){
         socket.emit('chat', $('#m').val());
         $('#m').val('');
