--- a/app/views/chat.html
+++ b/app/views/chat.html
@@ -21,9 +21,10 @@
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
     <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      var socket = io.connect('http://127.0.0.1:3000')
+      //var socket = io.connect('https://127.0.0.1:3000')
+      var socket = io.connect('https://sleepy-escarpment-76607.herokuapp.com');
       $('form').submit(function(){
         socket.emit('chat', $('#m').val());
         $('#m').val('');
